# move_to_see

./: CMakeLists.txt  README.md  move_to_see_viewer.rviz  move_to_see_viewer_v2.rviz  pi_rosinstall_commands.sh
CNN/: CNN_trn_plot.m  Display_images.m  MTS_CNN_finetune_v1.py  Train_MTS_CNN.m  VREP_CNN_Data_Formatter.m  VREP_CNN_Data_Sel_Image.m  VREP_CNN_Data_Sel_Stack.m  VREP_CNN_Data_Selector.m  imObjectFocus.m  imObjectFocusBatch.m  visualise_CNN_features.py
cfg/: picamera.cfg
cluster_hat/: README.md
cluster_hat/client_code/: main.py
cluster_hat/server_code/: main.py
cluster_hat/server_code/libs/: server_interface.py
experiment_scripts/: experiment_cost_map.py  experiment_ros.py  experiment_ros_naive.py  experiment_vrep.py  experiment_vrep_CNN.py  experiment_vrep_vary_radius.py  experiment_vrep_vary_weights.py  vrep.py
launch/: picamera_env.sh  picamera_remote_single.launch
matlab/: draw_poses.m  my_eul2rotm.m  my_eul2tform.m
move_to_see/: package.xml
move_to_see/launch/: Harvey.launch  picamera.launch  picamera_frames.launch  picamera_remote.launch  picamera_remote_old.launch
move_to_see/scripts/: calc_manipulability.m  interface.py  loop.sh  mdl_ur5_harvey.m  move_to_see.py  move_to_see_interfaces_CNN.py  move_to_see_interfaces_py27.py  moveit_robot.py  pyrep_interface.py  pyrep_move_to_see.py  ros_interface.py  ros_move_to_see.py  ros_move_to_see_interfaces.py  test_CNN_move_to_see_ros.py  test_move_to_see_pyrep.py  test_move_to_see_pyrep_singularity.py  test_move_to_see_ros.py  test_move_to_see_vrep.py  test_pyrep_interface.py  vrep_interface.py
move_to_see/scripts/old/: move_to_see_interfaces.py  picam_array_master_node.py.save  pyrep_move_to_see.py  ros_interface_naive.py  test_camera_array_ros.py  test_move_to_see_vrep.py  vrep_interface.py
move_to_see_msgs/: CMakeLists.txt  package.xml
move_to_see_msgs/msg/: moveToSee.msg  piCamArray.msg  piCamObject.msg
pi/: multi_picamera_viewer.py  picam_array_master_node.py  picam_capture.py  picam_zero_capture.py  picam_zero_capture_v2.py  rqt_multicamera_viewer.py
pi/libs/: server_interface.py
post_processing/: RUN_ME.py  plot_cost_map.py  plot_results.py
reinforcement_learning/: test_pyrep_env.py
reinforcement_learning/scripts/: DQN.py  DQN_cart_pole.py  dqn_interface.py  dqn_move_to_see.py  dqn_vrep_interface.py  environment_interface.py  pyrep_interface.py  train_DQN.py  train_pyrep_env.py
reinforcement_learning/scripts/gym-pyrep/: setup.py
reinforcement_learning/scripts/gym-pyrep/gym_pyrep/: __init__.py
reinforcement_learning/scripts/gym-pyrep/gym_pyrep.egg-info/: PKG-INFO  SOURCES.txt
reinforcement_learning/scripts/gym-pyrep/gym_pyrep/envs/: __init__.py  pyrep_env.py
scripts/: example_serial.py  ros_naive_move_to_see_interfaces.py
tests/: moveit_test.py  simpleImageTest.py  test.py  test_interface.py  test_occlusion_generation.py  test_roll_pitch_vrep.py  test_vector_math.py
vrep_scenes/: PyREP_panda.ttt
